Introduce a version number to QPlatformPrinterSupportFactoryInterface.

Append a version number to QPlatformPrinterSupportFactoryInterface_iid
as is done for QPlatformIntegrationFactoryInterface. Start with 5.1 since
a6bcdf151647ab7a97c9fe1d2c8c8dd2b718244e changes the API in 5.5.
Use macro in plugins.

Task-number: QTBUG-46009
Change-Id: Ib9d2a02d20b9c4c6ad6c1045a907d69d80e3def4
Reviewed-by: Paul Olav Tvete <paul.tvete@theqtcompany.com>